Fix top elements getting cut off

--- a/index.css
+++ b/index.css
@@ -28,8 +28,9 @@ body {
 }
 
 .top .epoch, .top .date, .top .seconds {
-	margin: 30px 60px;
+	margin: 20px 60px;
 	font-size: calc(0.013 * 100vw);
+	z-index: 1;
 }
 
 .top .date {
